# cardarena-remote-stage

./: .env.example  .gitignore  CHANGELOG.md  README.md  commitlint.config.js  commitlint.config.mjs  kiosk-browser.service  main.py  pyproject.toml  security.db  todo.txt
.github/workflows/: ci.yml  lint-commits.yml  release.yml
docs/superpowers/plans/: 2026-04-08-resource-pages-redesign.md
docs/superpowers/specs/: 2026-04-08-resource-pages-redesign.md  2026-04-11-optional-error-routing-design.md
examples/kiosk_only/: demo.py  demo_kiosk_base.py  demo_kiosk_extended.py  launch_demo.py
page/403/: index.html
page/404/: index.html
page/500/: index.html
page/502/: index.html
src/: __init__.py  config.py  main.py  middleware.py  startup.py  startup_validation.py
src/api/: app.py  config.py  history.py  registry.py  scheduler.py
src/api/models/: __init__.py  activity.py  kiosk.py  schedule.py
src/api/routes/: control.py  health.py  kiosks.py  openapi.py  schedule.py  utils.py
src/kiosk/: __init__.py
src/kiosk/controls/: __init__.py  base.py  playwright.py
src/kiosk/engine/: __init__.py  base.py  playwright.py
src/kiosk/kiosk/: __init__.py  base.py  playwright.py
src/kiosk/kiosk/factory/: base.py  config.py  playwright.py
src/kiosk/utils/: __init__.py
src/kiosk/utils/decorators/: __init__.py  control_action.py
src/resources/pages/boot-ready/: index.html
src/resources/pages/error-pages/403/: index.html
src/resources/pages/error-pages/404/: index.html
src/resources/pages/error-pages/500/: index.html
src/resources/pages/error-pages/502/: index.html
src/resources/pages/template/: README.md  script.js  style.css
src/security/: __init__.py  config.py  dependencies.py
src/security/api_keys/: __init__.py  db.py  repository.py  router.py
src/security/base/: __init__.py  principal.py  provider.py
src/security/providers/: __init__.py
src/security/providers/api_keys/: __init__.py  cli.py  db.py  models.py  provider.py  repository.py  router.py  utils.py
src/security/providers/ip_whitelist/: __init__.py  provider.py  scheme.py
src/utils/: __init__.py  config.py  error_pages.py  parsing.py  validation.py
src/utils/data/: __init__.py  parsing.py  validation.py
src/utils/exceptions/: __init__.py  error_page_map.py  errors.py  handlers.py
src/utils/logging/: __init__.py  log_levels.py
src/utils/monitoring/: __init__.py  logging.py
tests/: conftest.py  test_config.py  test_error_pages.py  test_startup.py
tests/api/: test_config.py  test_models.py  test_registry.py  test_routes_control.py  test_routes_health.py  test_routes_kiosks.py  test_routes_schedule.py  test_scheduler.py
tests/kiosk/: conftest.py  test_controls.py  test_engine.py  test_kiosk.py  test_kiosk_factory.py  test_playwright_controls.py  test_playwright_engine.py  test_playwright_kiosk.py
tests/security/: test_security.py
