[project]
name = "cardarena-remote-stage"
version = "0.1.0"
description = "Production-ready Chromium-based kiosk browser engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.48.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
browser-engine = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["e2e: end-to-end test requiring a real browser"]

[tool.uv]
package = true

[tool.uv.sources]

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
