[project]
name = "cardarena-remote-stage"
version = "0.2.0-dev.3"
description = "Production-ready Chromium-based kiosk browser engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "playwright>=1.48.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
browser-engine = "src.main:main"
apikey = "src.security.providers.api_keys.cli:main"
kiosk = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end test requiring a real browser",
    "headless: integration test using real headless Chromium (no display required)",
]

[tool.uv]
package = true

[tool.uv.sources]

[tool.uv.workspace]
members = []

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
build_command = ""
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^ci:",
    "^docs:",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest-playwright>=0.7.2",
    "pytest-asyncio>=1.3.0",
]
